[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/scripts/environment/interactive.gd" type="Script" id=1]
[ext_resource path="res://assets/scripts/environment/shiftable.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/objects/sheet_topic_dream.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 16.5, 9 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 13, 12.1875 )

[node name="ClothesRack 2" type="RigidBody2D" groups=["shiftable"]]
mode = 1
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="."]
light_mask = 4
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 316.683, 55.4721, 33.1306, 27.1069 )

[node name="Hint" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
show_behind_parent = true
light_mask = 4
texture = ExtResource( 3 )
offset = Vector2( 0, -13.5534 )
region_enabled = true
region_rect = Rect2( 316.683, 55.4721, 33.1306, 27.1069 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -4 )
shape = SubResource( 23 )

[node name="ActiveArea" type="Area2D" parent="."]
visible = false
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveArea"]
position = Vector2( 0, -4 )
shape = SubResource( 22 )

[connection signal="body_entered" from="ActiveArea" to="ActiveArea" method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="ActiveArea" to="ActiveArea" method="_on_InteractArea_body_exited"]
[connection signal="can_interact" from="ActiveArea" to="." method="_on_ActiveArea_can_interact"]
[connection signal="cannot_interact" from="ActiveArea" to="." method="_on_ActiveArea_cannot_interact"]
